--- a/pages/messages.html
+++ b/pages/messages.html
@@ -4,8 +4,4 @@ title: "留言板"
 description: ""
 group: navigation
 ---
-
-<h2>Hello EveryOne:</h2>
-<p>欢迎访问我的网站，欢迎您随时在下面留言O(∩_∩)O~</p>
-<br/>
-
+<p style="font-size: 200%; font-weight: bold;font-family:Microsoft YaHei;"><a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我" style="margin-right: 20">关于我</a></p>
