--- a/soft/index.html
+++ b/soft/index.html
@@ -7,5 +7,5 @@ comments: false
 ---
 
 
-<li>Epubviewer：<a target="__blank" href="EpubViewer">/soft/epubviewer.html</a> </li>
+<li>Epubviewer：<a target="__blank" href="EpubViewer">soft/epubviewer.html</a> </li>
 
