--- a/index.html
+++ b/index.html
@@ -1,82 +1,134 @@
 ---
 layout: default
-title: "lilei的个人文档"
+title: "我的笔记管理"
 tagline: "Home Page"
-description: "Home Page"
+description: "主页, Home Page"
 comments: false
 ---
+
 {% include JB/setup %}
-<section>
-  {% for post in paginator.posts %}
-  <article class="nested">
-
-    <header>
-      <h2><a href="{{ post.url }}" title="查看《{{ post.title }}》">{{ post.title }}</a></h2>
+<div>
+     {% assign posts_num = 12 %}
+<div style="width: 380px; border: 1px solid gray;margin:14px;float:left">
+<div style="width: 380px; height: 400px; padding: 10px 0; background: #FF7023;">
+  <article class="category-main">
+    <header style="height:26px">
+      <h2><a href="{{ site.JB.PKMcategories_path }}" title="PKM分类文章">PKM</a></h2>
     </header>
-
     <section>
-<pre style="background-color: transparent;border: 0;">
-{{ post.content | strip_html |truncate:80 | squeezenewline }}
-</pre>
-      <a class="button-link" href="{{ post.url }}" rel="nofollow" title="查看全文">read more</a>
+     {% assign posts_category = 'PKM' %}
+     {% include lei_widgets/posts_collate2 %}
     </section>
-
     <footer>
-      <p>
-        发表日期：<a href="{{ site.JB.archive_path }}#{{ post.date | date: '%B-%Y' }}" rel="nofollow" title="查看此月所有文章">{{ post.date | date: "%d %B %Y" }}</a>，
-        作者：<a href="{{  site.JB.about_path }}" rel="nofollow" title="作者">{{ site.author.name }}</a>，
-        类别：<a href="/pages/{{ post.group }}categories.html#{{ post.category }}-ref" rel="nofollow" title="查看此类别下的所有文章">{{ post.categories }}</a>{% if site.JB.comments.provider == 'duoshuo' %}，
-        评论：<a href="{{ post.url }}#ds-thread" rel="nofollow" title="查看此文章的评论"><span class="ds-thread-count" data-thread-key="{{ post.title }}" data-count-type="comments"></span></a>{% endif %}
-      </p>
+      <span align="right"><a class="button-link" href="{{ site.JB.PKMcategories_path }}" rel="nofollow"
+       title="查看更多本类文章">more ...</a></span>
     </footer>
-
   </article>
-  {% endfor %}
-
-
-</section>
-
-<!-- Pagination Links -->
-<section class="pagination pagination-centered">
-  <ul>
-    <!-- First Page -->
-    {% if paginator.previous_page %}
-    <li><a href="/index.html">&laquo;&laquo;</a></li>
-    {% else %}
-    <li class="disabled"><a href="#">&laquo;&laquo;</a></li>
-    {% endif %}
-
-    <!-- Previous Page -->
-    {% if paginator.previous_page %}
-    <li>
-      {% if paginator.previous_page == 1 %}
-      <a href="/index.html">&laquo;</a>
-      {% else %}
-      <a href="/page{{ paginator.previous_page }}">&laquo;</a>
-      {% endif %}
-    </li>
-    {% else %}
-    <li class="disabled"><a href="#">&laquo;</a></li>
-    {% endif %}
-
-    <!-- Current Page -->
-    <li class="active">
-      <span class="page_number ">第 {{ paginator.page }}/{{ paginator.total_pages }} 页</span>
-    </li>
-
-    <!-- Next Page -->
-    {% if paginator.next_page %}
-    <li><a href="/page{{paginator.next_page}}">&raquo;</a></li>
-    {% else %}
-    <li class="disabled"><a href="#">&raquo;</a></li>
-    {% endif %}
-
-    <!-- Last Page -->
-    {% if paginator.next_page %}
-    <li><a href="/page{{ paginator.total_pages }}">&raquo;&raquo;</a></li>
-    {% else %}
-    <li class="disabled"><a href="#">&raquo;&raquo;</a></li>
-    {% endif %}
-  </ul>
-</section>
-
+</div></div>
+<div style="width: 380px; border: 1px solid gray;margin:14px;float:left"> 
+<div style="width: 380px; height: 400px; padding: 10px 0; background: #91D100;">
+  <article class="category-main">
+    <header style="height:26px">
+      <h2><a href="{{ site.JB.ITcategories_path }}" title="IT分类文章">IT</a></h2>
+    </header>
+    <section>
+     {% assign posts_category = 'IT' %}
+     {% include lei_widgets/posts_collate2 %}
+    </section>
+    <footer>
+      <span align="right"><a class="button-link" href="{{ site.JB.ITcategories_path  }}" rel="nofollow"
+       title="查看更多本类文章">more ...</a></span>
+    </footer>
+  </article>
+</div></div>
+<div style="width: 380px; border: 1px solid gray;margin:14px;float:left"> 
+<div style="width: 380px; height: 400px; padding: 10px 0; background: #AA40FF;">
+  <article class="category-main">
+    <header style="height:26px">
+      <h2><a href="{{ site.JB.DESIGNcategories_path }}" title="Design分类文章">Design</a></h2>
+    </header>
+    <section>
+     {% assign posts_category = 'Design' %}
+     {% include lei_widgets/posts_collate2 %}
+    </section>
+    <footer>
+      <span align="right"><a class="button-link" href="{{ site.JB.DESIGNcategories_path }}" rel="nofollow"
+       title="查看更多本类文章">more ...</a></span>
+    </footer>
+  </article>
+</div></div>
+<div style="width: 380px; border: 1px solid gray;margin:14px;float:left"> 
+<div style="width: 380px; height: 400px; padding: 10px 0; background: #56c5ff;">
+  <article class="category-main">
+    <header style="height:26px">
+      <h2><a href="{{ site.JB.LIFEcategories_path }}" title="Life分类文章">Life</a></h2>
+    </header>
+    <section>
+     {% assign posts_category = 'Life' %}
+     {% include lei_widgets/posts_collate2 %}
+    </section>
+    <footer>
+      <span align="right"><a class="button-link" href="{{site.JB.LIFEcategories_path}}" rel="nofollow"
+       title="查看更多本类文章">more ...</a></span>
+    </footer>
+  </article>
+</div>
+</div>
+</div>
+<style>
+.demo1{
+    background-color: yellow;
+    text-align: center;
+    height: 80px;    
+    display: -webkit-flex;     
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    /* for uc */
+    display: -webkit-box;  
+    -webkit-box-align: center;
+  }
+  .demo1>div{
+    background-color: #E1B700;
+    margin: 2px;       
+    -webkit-flex: 1;          
+    flex: 1;         
+    /* for uc */
+    -webkit-box-flex: 1;      
+    -moz-box-flex: 1;         
+    -ms-flex: 1;                
+  }
+  .demo2{
+    background-color: yellow;
+    width: 80px;
+    height: 200px;
+    display: -webkit-flex;     
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    align-items: center;
+    /* for uc */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-box-align: center;
+  }
+  .demo2>div{
+    background-color: green;
+    width: 40px;
+    margin: 2px;       
+    -webkit-flex: 1;          
+    flex: 1;         
+    /* for uc */
+    -webkit-box-flex: 1;      
+    -moz-box-flex: 1;         
+    -ms-flex: 1;    
+  }
+</style>
+<div class="demo1" style="clear:both;margin:12px">
+  <div>
+    <img src="/assets/img/QR.png" height="200" width="200" alt="扫我浏览" />
+  </div>
+</div>
