--- a/pages/404.html
+++ b/pages/404.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
     <title>Page not found</title>
     <style type="text/css" media="screen">
@@ -10,12 +10,27 @@
       }
 
       .container { margin: 50px auto 40px auto; width: 600px; text-align: center; }
-
+.blank{height:100;margin:50px;}
       a { color: #4183c4; text-decoration: none; }
       a:hover { text-decoration: underline; }
 
-      h1 { width: 800px; position:relative; left: -100px; letter-spacing: -1px; line-height: 60px; font-size: 60px; font-weight: 100; margin: 0px 0 50px 0; text-shadow: 0 1px 0 #fff; }
-      p { color: rgba(0, 0, 0, 0.5); margin: 20px 0; line-height: 1.6; }
+      h1 {
+	width: 800px;
+	position: relative;
+	left: -100px;
+	letter-spacing: -1px;
+	line-height: 60px;
+	font-size: 60px;
+	font-weight: 100;
+	margin: 0px 0 50px 0;
+	text-shadow: 0 1px 0 #fff;
+	color: rgba(255,51,0,0.8);
+}
+      p {
+	color: rgba(0,0,255,0.8);
+	margin: 20px 0;
+	line-height: 1.6;
+}
 
       ul { list-style: none; margin: 25px 0; padding: 0; }
       li { display: table-cell; font-weight: bold; width: 1%; }
@@ -44,12 +59,24 @@
         margin: 0 10px;
       }
 
+    body,td,th {
+	color: #0000FF;
+}
+.title1{vertical-align:middle}
     </style>
   </head>
   <body>
 
     <div class="container">
 
+<div class="title1">
+      <a href="http://hustlei.github.io/" class="logo logo-img-1x">
+        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
+      </a>
+      <a href="http://hustlei.github.io/" class="logo logo-img-2x">
+        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
+      </a></div>
+      <div class="blank"></div>
       <h1>404</h1>
       <p><strong>Can't find anything here.</strong></p>
 
@@ -66,14 +93,6 @@
         <a href="http://hustlei.github.io/pages/about.html">About Site</a> —
         <a href="mailto:hustlei@sina.cn">@hustlei</a>
       </div>
-
-      <a href="http://hustlei.github.io/" class="logo logo-img-1x">
-        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/favicon.ico"
-      </a>
-
-      <a href="http://hustlei.github.io/" class="logo logo-img-2x">
-        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/favicon.ico"
-      </a>
     </div>
   
 
