move 404.html_change fixbar
把fixbar修改为根据宽度自动变动。404页面移动到根目录。修改二维码图片根据宽度自动调整大小。修改post

--- a/404.html
+++ b/404.html
@@ -69,30 +69,26 @@
 
     <div class="container">
 
-<div class="title1">
-      <a href="http://hustlei.github.io/" class="logo logo-img-1x">
-        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
-      </a>
-      <a href="http://hustlei.github.io/" class="logo logo-img-2x">
-        <img width="32" height="32" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
-      </a></div>
-      <div class="blank"></div>
+
       <h1>404</h1>
+      <p><strong>出错了哦</strong></p>
       <p><strong>Can't find anything here.</strong></p>
 
-      <p> You can tell the author about this error, if you like this site.
-      </p>
-
-      <p>
-        <a href="http://hustlei.github.io/pages/messages.html">Give your seggestions</a>
-        to the author.
-      </p>
+      <p> You can tell the author about this error, if you like this site.</p>
+      <p><a href="http://hustlei.github.io/pages/messages.html">Give your seggestions</a>
+        to the author.</p>
 
       <div id="suggestions">
-        <a href="http://hustlei.github.io/pages/messages.html">Contact author</a> —
-        <a href="http://hustlei.github.io/pages/about.html">About Site</a> —
-        <a href="mailto:hustlei@sina.cn">@hustlei</a>
+        <a href="http://hustlei.github.io/">首页(Home)</a>—
+        <a href="http://hustlei.github.io/pages/messages.html">留言板</a> —
+        <a href="http://hustlei.github.io/pages/about.html">关于本站</a> —
+        <a href="mailto:hustlei@sina.cn">联系我</a> 
       </div>
+      <div class="blank"></div>
+      <div class="title1">
+      <a href="http://hustlei.github.io/" class="logo logo-img-1x">
+        <img width="64" height="64" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
+      </a></div>
     </div>
   
 
