--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ comments: false
   }
 </style>
 <div class="demo1" style="clear:both;margin:12px">
-  <div>
-    <img src="/assets/img/QR.png" height="200" width="200" alt="扫我浏览" />
+  <div padding="25" style="height:220px;">
+    <img src="/assets/img/QR.png" style="max-width:100%;max-height:100%;"  alt="扫我浏览" />
   </div>
 </div>
