--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,18 @@ comments: false
 <li>从2013年开始整理个人知识，2014将个人文档作为备忘放在github上</li>
 <li>stay hungry! stay foolish</li>
 </ul>
-<h2>个人资料汇总</h2>
+<h2>本站简介</h2>
+<p>本站基于jekyll建立，在github网站上使用github pages自动生成静态网站。整站框架是从jekyll-bootstrap修改而来。也就是说本站采用的是jekyll技术，前端使用的是bootstrap。</p>
+<p>本站采用的技术，或者说如果要建立github jekyll网站可以需要的技术有：</p>
+<ul>
+<li>git: 管理jekyll源码，向github网站上传源码也需要用git。</li>
+<li>jekyll: 整个网站是采用jekyll技术建立的，所有的文章都是markdown格式的，通过配置和使用模板修改网站展示方式。</li>
+<li>jekyll-bootstrap: 一个使用bootstrap作为前端的jekyll站点模板。初学者可以直接拿来上传到自己的github上，只需要添加自己的文章就可以了。</li>
+<li>bootstrap: 网页前端框架，如果要修改自己网站的外观之类的，可以通过配置bootstrap实现。</li>
+<li>liquid语法: 基于ruby的一个脚本语言，在html中可以实现很多类似编程方式的处理，如果想深入修改jekyll模板，可以学习。</li>
+<li>markdown语法: 一个简单的文档格式标记语言，jekyll可以使用markdown语法、html等格式写文章，一般都是使用的markdown格式。</li>
+</ul>
+<h2>个人资料</h2>
 <ol>
 <li>My新浪微博：<a target="__blank" href="http://weibo.com/hustlei">http://weibo.com/hustlei</a> </li>
 <li>My优酷：<a target="__blank" href="http://i.youku.com/hustlei">http://i.youku.com/hustlei</a></li>
