修改导航和搜索

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ comments: false
 {% include JB/setup %}
 {% assign posts_num = 12 %}
 <div class="row">
-    <article class="col-md-6 col-lg-4 p-1">
+    <article class="col-md-6 col-lg-4 p-1" style="min-height:440px">
         <header>
             <h2>
                 <a href="{{ site.JB.pkmcategories_path }}" title="PKM分类文章">PKM</a>
@@ -24,7 +24,7 @@ comments: false
                title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1">
+    <article class="col-md-6 col-lg-4 p-1" style="min-height:440px">
         <header>
             <h2>
                 <a href="{{ site.JB.itcategories_path }}" title="IT分类文章">IT</a>
@@ -39,7 +39,7 @@ comments: false
                    title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1">
+    <article class="col-md-6 col-lg-4 p-1" style="min-height:440px">
         <header>
             <h2>
                 <a href="{{ site.JB.designcategories_path }}" title="Design分类文章">Design</a>
@@ -54,7 +54,7 @@ comments: false
                    title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1">
+    <article class="col-md-6 col-lg-4 p-1" style="min-height:440px">
         <header>
             <h2>
                 <a href="{{ site.JB.lifecategories_path }}" title="Life分类文章">Life</a>
