--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ comments: false
 {% include JB/setup %}
 {% assign posts_num = 12 %}
 <div class="row">
-    <article class="col-md-6 col-lg-4 p-1" style="min-height:420px">
+    <article class="col-md-6 col-lg-4 p-3">
         <header>
             <h2>
                 <a href="{{ site.JB.pkmcategories_path }}" title="PKM分类文章">PKM</a>
@@ -21,11 +21,11 @@ comments: false
             {% include widgets/posts_collate2 %}
         </section>
         <footer>
-            <a class="btn-sm btn-outline-info float-xs-right" href="{{ site.JB.pkmcategories_path }}" rel="nofollow"
+            <a class="btn btn-sm btn-outline-primary float-xs-right" href="{{ site.JB.pkmcategories_path }}" rel="nofollow"
                title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1" style="min-height:420px">
+    <article class="col-md-6 col-lg-4 p-3">
         <header>
             <h2>
                 <a href="{{ site.JB.itcategories_path }}" title="IT分类文章">IT</a>
@@ -37,11 +37,11 @@ comments: false
             {% include widgets/posts_collate2 %}
         </section>
         <footer>
-                <a class="btn-sm btn-outline-info float-xs-right" href="{{ site.JB.itcategories_path  }}" rel="nofollow"
+                <a class="btn btn-sm btn-outline-primary float-xs-right" href="{{ site.JB.itcategories_path  }}" rel="nofollow"
                    title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1" style="min-height:420px">
+    <article class="col-md-6 col-lg-4 p-3">
         <header>
             <h2>
                 <a href="{{ site.JB.designcategories_path }}" title="Design分类文章">Design</a>
@@ -53,11 +53,11 @@ comments: false
             {% include widgets/posts_collate2 %}
         </section>
         <footer>
-                <a class="btn-sm btn-outline-info float-xs-right" href="{{ site.JB.designcategories_path }}" rel="nofollow"
+                <a class="btn btn-sm btn-outline-primary float-xs-right" href="{{ site.JB.designcategories_path }}" rel="nofollow"
                    title="查看更多本类文章">more ...</a>
         </footer>
     </article>
-    <article class="col-md-6 col-lg-4 p-1" style="min-height:420px">
+    <article class="col-md-6 col-lg-4 p-3">
         <header>
             <h2>
                 <a href="{{ site.JB.lifecategories_path }}" title="Life分类文章">Life</a>
@@ -69,7 +69,7 @@ comments: false
             {% include widgets/posts_collate2 %}
         </section>
         <footer>
-                <a class="btn-sm btn-outline-info float-xs-right" href="{{site.JB.lifecategories_path}}" rel="nofollow"
+                <a class="btn btn-sm btn-outline-primary float-xs-right" href="{{site.JB.lifecategories_path}}" rel="nofollow"
                    title="查看更多本类文章">more ...</a>
         </footer>
     </article>
