--- a/pages/search.html
+++ b/pages/search.html
@@ -9,9 +9,9 @@ showtitle: false
 
 <div id="loader" hidden><img src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
 
-<div id=search_content" class="text-info">
+<div id="search_content" class="text-info">
 <p class="display-4"><small><small>搜索结果</small></small></p>
-  <div id="search_results">
+  <div id="search_result">
   <p>请先输入要搜索的内容<small class="text-muted">(支持正则表达式搜索)</small>。</p>
   </div>
   </div>
