修改page,post模板结构，修复显示错误

--- a/pages/search.html
+++ b/pages/search.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: 昨日星辰-站内搜索 
+title: 站内搜索 
 header: Pages
 comments: false
 id: search
 ---
 {% include JB/setup %}
 
-<div id="loader" hidden><img src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
+<div id="loader" class="p-3" style="display: none;"><img class="mx-auto" src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
 
 <div id="search_content" class="text-info">
 <p class="display-4"><small><small>搜索结果</small></small></p>
