--- a/pages/messages.html
+++ b/pages/messages.html
@@ -2,5 +2,11 @@
 layout: page
 title: "留言板"
 description: ""
+id: message
 ---
-<p style="font-size: 200%; font-weight: bold;font-family:Microsoft YaHei;"><a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我" style="margin-right: 20">关于我</a></p>
+
+<div class="text-info">
+  <p class="display-4"><small><small>Hello Everyone</small></small></p>
+  <p>欢迎来访交流。</div>
+
+{% include widgets/uyan_comment %}
