--- a/pages/music.html
+++ b/pages/music.html
@@ -6,7 +6,7 @@ comments: true
 id: music
 ---
 
-<p>优美的音乐，醉人的旋律，沉醉在美丽的音符中，感受心灵的宁静</p>
+<p class="text-xs-center">优美的音乐，醉人的旋律，沉醉在美丽的音符中，感受心灵的宁静</p>
 
 <p><br/></p>
 
