--- a/soft/index.html
+++ b/soft/index.html
@@ -1,12 +1,111 @@
----
-layout: page
-title: Softwares
-tag-line: Phantom Studio Softwares
-header: Post Archive
-group: navigation
-comments: false
----
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="finesoft, tinnysoft, handysoft, minsoft, toolsoft">
+    <meta name="description" content="minsoftwares, 工具小软件, tools">
+    <meta name="author" content="{{ site.author.name }}">
+    <meta name="robots" content="all">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <title>finesoft - my handy softwares</title>
+    <link rel="stylesheet" href="/assets/widgets/bootstrap-4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.min.css">
+</head>
+<body>
+    <header id="header" style="background: #373c3a">
+        <div class="container pr-0">
+            <div class="clearfix navbar-dark">
+                <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#nav-header"></button>
+                <a class="navbar-brand text-muted" href="/">Home</a>
+                <nav class="float-xs-right hidden-xs-down">
+                    <a href="{{ site.JB.about_path }}" class="text-muted" rel="nofollow" title="关于我">关于</a>
+                    <span class="text-muted">/</span>
+                    <a href="{{ site.JB.messages_path }}" class="text-muted" rel="nofollow" title="留言板">留言板</a>
+                </nav>
+            </div>
+            <section class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item text-xs-center active">
+                        <img class="mx-auto" src="http: />/hustlei.qiniudn.com/epubviewer/epubviewer1.1-lite.png" alt="epuviewer lite">
+                    </div>
+                    <div class="carousel-item text-xs-center">
+                        <img class="mx-auto" src="http://hustlei.qiniudn.com/epubviewer/epubviewer1.1.png" alt="epuviewer">
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#carousel-example" role="button" data-slide="prev">
+                    <span class="icon-prev" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example" role="button" data-slide="next">
+                    <span class="icon-next" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </section>
+        </div>
+    </header>
 
+    <main id="main" class="container py-1">
+        <div class="row">
+            <article class="col-md-6 col-lg-4 p-2">
+                <div class="card">
+                    <img class="card-img-top w-100" src="http://hustlei.qiniudn.com/epubviewer/epubviewer1.1.png" alt="EpubViewer">
+                    <div class="card-block">
+                        <h4 class="card-title">EpubViewer</h4>
+                        <p class="card-text">EpubViewer是一个比较清新的Epub阅读器，包含了许多我自己想要的而功能。</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-6 col-lg-4 p-2">
+                <div class="card">
+                </div>
+            </article>
+            <article class="col-md-6 col-lg-4 p-2">
+                <div class="card">
+                </div>
+            </article>
+        </div>
+    </main>
 
-<li>Epubviewer：<a target="__blank" href="EpubViewer">soft/epubviewer.html</a> </li>
-
+    <section id="nav-bottom" class="container">
+        <hr class="my-1" />
+        <nav class="row text-xs-center db-footer-links px-3">
+            <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
+            <a class="col-md-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
+            <a class="col-md-4" href="{{ site.JB.about_path }}" rel="nofollow">关&nbsp;于</a>
+        </nav>
+        <hr class="my-1" />
+    </section>
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="二维码" /></div>
+                <div class="col-md-8">
+                    <p><small>{% include widgets/statcounter %}</small></p>
+                    <p><small>&copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.</small></p>
+                    <p>
+                        <small>
+                            本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>和<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>构建.
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Scripts -->
+    <script defer src="/assets/widgets/jquery-3.1/js/jquery-3.1.1.min.js"></script>
+    <script defer src="/assets/widgets/tether-1.4/js/tether.min.js"></script>
+    <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
+    {% if page.id == "search" %}
+    <script defer src="/assets/widgets/search_box.js"></script> {% endif %}
+    {% if is_production and page.content contains "$" %} {% include widgets/mathjax %} {% endif %}
+    {% include widgets/baidu_share %}
+    {% include widgets/back_top_button %}
+</body>
+</html>
