--- a/my/girl.html
+++ b/my/girl.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="beauty, girls"
     <meta name="robots" content="all">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <title>girls</title>
+    <title>girl</title>
     <link rel="stylesheet" href="/assets/widgets/bootstrap-4.0/css/bootstrap.min.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
     <main id="main" class="container py-1">
         <div class="row">
             <script src="js/glist.js"></script>
-            <script src="js/gcard.js"></script>
+            <script src="js/girl.js"></script>
         </div>
     </main>
 
