change my styles

--- a/my/index.html
+++ b/my/index.html
@@ -5,7 +5,14 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>My Favour</title>
     <style type="text/css" media="all">
-    body,.header,.page,.footer
+    body
+    {
+    	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+    	font-size: 16px;
+    	line-height: 1.5;
+    	color: #373a3c;
+    }
+    .header,.page,.footer
     {
     	margin:auto;
     }
@@ -50,7 +57,7 @@
     <thead><tr><th colspan="2">My Lovest</th></tr></thead>
     <tbody>
         <tr><td>
-            <a href="../my/girls.html">My Lovest Girls</a>
+            <a href="girls.html">My Lovest Girls</a>
         </td><td>girl bodys love forever, beauty sexy</td>
         </tr>
      </tbody>    
