--- a/soft/index.html
+++ b/soft/index.html
@@ -32,7 +32,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item text-xs-center active">
-                        <img class="mx-auto" src="http: />/hustlei.qiniudn.com/epubviewer/epubviewer1.1-lite.png" alt="epuviewer lite">
+                        <img class="mx-auto" src="http://hustlei.qiniudn.com/epubviewer/epubviewer1.1-lite.png" alt="epuviewer lite">
                     </div>
                     <div class="carousel-item text-xs-center">
                         <img class="mx-auto" src="http://hustlei.qiniudn.com/epubviewer/epubviewer1.1.png" alt="epuviewer">
