--- a/my/girls.html
+++ b/my/girls.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="beauty, girls"
-    <meta name="robots" content="all">
-    <link rel="shortcut icon" href="/assets/favicon.ico">
-    <title>girls</title>
-    <link rel="stylesheet" href="/assets/widgets/bootstrap-4.0/css/bootstrap.min.css">
-</head>
-<body>
-    <header id="header" style="background: #373c3a">
-        <div class="container pr-0">
-            <div class="clearfix navbar-dark">
-                <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#nav-header"></button>
-                <a class="navbar-brand text-muted" href="/">Home</a>
-                <nav class="float-xs-right hidden-xs-down">
-                    <a href="{{ site.JB.about_path }}" class="text-muted" rel="nofollow" title="关于我">关于</a>
-                    <span class="text-muted">/</span>
-                    <a href="{{ site.JB.messages_path }}" class="text-muted" rel="nofollow" title="留言板">留言板</a>
+---
+layout: custom
+title: "Girls"
+tagline: 
+description: "girl, beauty"
+id: girls
+comments: false
+---
+    <section id="nav-main" style="background: #242424">
+        <div class="container hidden-sm-up">
+                <nav class="collapse navbar-toggleable-xs" id="nav-header">
+                    <ul class="nav navbar-nav navbar-dark">
+                        {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
+                        <li class="nav-item {% if page.id == "home" %} active {% endif %}">
+                            <a class="nav-link" href="/" rel="nofollow">Home</a>
+                        </li>
+                        <li class="nav-item {% if page.id == 'grils' %} active {% endif %}">
+                            <a class="nav-link" href="/my/girls.html" rel="nofollow">Girls</a>
+                        </li>
+                    </ul>
                 </nav>
-            </div>
-            <section class="carousel slide" data-ride="carousel">
-
-            </section>
         </div>
-    </header>
+    </section>
 
     <main id="main" class="container py-1">
         <div class="row">
@@ -35,31 +29,3 @@
         </div>
     </main>
 
-    <section id="nav-bottom" class="container">
-        <hr class="my-1" />
-        <nav class="row text-xs-center db-footer-links px-3">
-            <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
-            <a class="col-md-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
-            <a class="col-md-4" href="{{ site.JB.about_path }}" rel="nofollow">关&nbsp;于</a>
-        </nav>
-        <hr class="my-1" />
-    </section>
-    <footer id="footer" class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="二维码" /></div>
-                <div class="col-md-8">
-                    <p>
-                        <small>
-                            本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>和<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>构建.
-                        </small>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Scripts -->
-    <script defer src="/assets/widgets/jquery-3.1/js/jquery-3.1.1.min.js"></script>
-    <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
-</body>
-</html>
