add pre next to girl,change my/index

--- a/my/girl.html
+++ b/my/girl.html
@@ -30,7 +30,7 @@ comments: true
 </ol>
 </nav>
 
-        <div class="row">
+        <div>
             <script src="js/glist.js"></script>
             <script src="js/girl.js"></script>
         </div>
