--- a/my/girls.html
+++ b/my/girls.html
@@ -14,7 +14,7 @@ comments: false
                         <li class="nav-item {% if page.id == "home" %} active {% endif %}">
                             <a class="nav-link" href="/" rel="nofollow">Home</a>
                         </li>
-                        <li class="nav-item {% if page.id == 'grils' %} active {% endif %}">
+                        <li class="nav-item {% if page.id == 'girls' %} active {% endif %}">
                             <a class="nav-link" href="/my/girls.html" rel="nofollow">Girls</a>
                         </li>
                     </ul>
