--- a/soft/index.html
+++ b/soft/index.html
@@ -23,24 +23,24 @@ comments: false
         </div>
     </section>
     
-            <section class="carousel slide" data-ride="carousel">
+            <section id="carousel-soft" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example" data-slide-to="1"></li>
+                    <li data-target="#carousel-soft" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-soft" data-slide-to="1"></li>
                 </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item text-xs-center active">
-                        <img class="mx-auto" src="http://hustlei.qiniudn.com/soft/soft1.jpg" alt="epuviewer lite">
+                <div class="carousel-inner" style="max-height:300px" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="w-100" src="http://hustlei.qiniudn.com/soft/soft1.jpg">
                     </div>
-                    <div class="carousel-item text-xs-center">
-                        <img class="mx-auto" src="http://hustlei.qiniudn.com/soft/soft2.jpg" alt="epuviewer">
+                    <div class="carousel-item">
+                        <img class="w-100" src="http://hustlei.qiniudn.com/soft/soft2.jpg">
                     </div>
                 </div>
-                <a class="left carousel-control" href="#carousel-example" role="button" data-slide="prev">
+                <a class="left carousel-control" href="#carousel-soft" role="button" data-slide="prev">
                     <span class="icon-prev" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-control" href="#carousel-example" role="button" data-slide="next">
+                <a class="right carousel-control" href="#carousel-soft" role="button" data-slide="next">
                     <span class="icon-next" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -49,7 +49,7 @@ comments: false
 
     <main id="main" class="container py-1">
         <div class="row">
-            <article class="col-md-6 col-lg-4 p-2">
+            <article class="col-xs-6 col-md-4 p-1">
                 <div class="card">
                     <div class="text-xs-center"><img class="card-img-top mx-auto" src="http://hustlei.qiniudn.com/soft/epub.ico" alt="EpubViewer"></div>
                     <div class="card-block">
@@ -57,14 +57,6 @@ comments: false
                         <p class="card-text">EpubViewer是一个比较清新的Epub阅读器，包含了许多我自己想要的而功能。</p>
                         <a href="epubviewer.html" class="btn btn-sm btn-primary float-xs-right">detail</a>
                     </div>
-                </div>
-            </article>
-            <article class="col-md-6 col-lg-4 p-2">
-                <div class="card">
-                </div>
-            </article>
-            <article class="col-md-6 col-lg-4 p-2">
-                <div class="card">
                 </div>
             </article>
         </div>
