--- a/soft/index.html
+++ b/soft/index.html
@@ -49,7 +49,7 @@ comments: false
 
     <main id="main" class="container py-1">
         <div class="row">
-            <article class="col-xs-6 col-md-4 p-1">
+            <article class="col-sm-6 col-md-4 p-1">
                 <div class="card">
                     <div class="text-xs-center"><img class="card-img-top mx-auto" src="http://hustlei.qiniudn.com/soft/epub.ico" alt="EpubViewer"></div>
                     <div class="card-block">
