fixed styles,add baidu push

--- a/404.html
+++ b/404.html
@@ -87,7 +87,7 @@
       <div class="blank"></div>
       <div class="title1">
       <a href="http://hustlei.github.io/" class="logo logo-img-1x">
-        <img width="64" height="64" title="" alt="" src="http://hustlei.github.io/assets/img/favicon.ico">
+        <img width="64" height="64" title="" alt="" src="/assets/favicon.ico">
       </a></div>
     </div>
   
