move all list to list dir, fix smusic bug

--- a/pages/links.html
+++ b/pages/links.html
@@ -1,8 +1,8 @@
----
+﻿---
 layout: page
 title: "友情链接"
 description: "Useful Links"
 comments: false
 ---
 {% include JB/setup %}
-{% include widgets/links_list %}
+{% include lists/links_list %}
