add baidu search in my site

--- a/pages/search.html
+++ b/pages/search.html
@@ -7,6 +7,11 @@ id: search
 ---
 {% include JB/setup %}
 
+
+<div id="search2" class="text-muted">
+<table class="float-sm-right text-sm-right mr-1"><tbody><tr><td style="border:1px solid #ddd; padding:1px ">
+  如果有需要，可以尝试使用<a class="btn btn-success btn-sm" role="button" href="/pages/search2.html" style="margin:0 4px">站内搜索2</a><br><small>(使用第三方引擎)</small></td></tr></tbody></table></div>
+
 <div id="loader" class="p-3" style="display: none;"><img class="mx-auto" src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
 
 <div id="search_content" class="text-info">
