修改js 输出html方式
document.write()修改为getElementById("").innerHTML=“”

--- a/my/girls.html
+++ b/my/girls.html
@@ -23,9 +23,9 @@ comments: false
     </section>
 
     <main id="main" class="container py-1">
-        <div class="row">
+        <div class="row" id="girls">
+        </div>
             <script src="js/glist.js"></script>
             <script src="js/gcard.js"></script>
-        </div>
     </main>
 
