--- a/pages/search.html
+++ b/pages/search.html
@@ -10,7 +10,7 @@ id: search
 
 <div id="search2" class="text-muted clearfix">
 <table class="float-md-right text-md-right mx-auto" style="border-style:none"><tbody><tr><td style="border:1px solid #ddd; padding:1px ">
-  如果有需要，可以尝试使用<a class="btn btn-success btn-sm" role="button" href="/pages/search2.html" style="margin:0 4px">站内搜索2</a><br><small>(使用第三方引擎)</small></td><td style="width:3rem;border-style:none" class="hidden-md-down"></td><td style="width:3rem;border-style:none" class="hidden-md-down"></td></tr></tbody></table></div>
+  如果有需要，可以尝试使用<a class="btn btn-success btn-sm" role="button" href="{{ site.production_url }}/pages/search2.html" style="margin:0 4px">站内搜索2</a><br><small>(使用第三方引擎)</small></td><td style="width:3rem;border-style:none" class="hidden-md-down"></td><td style="width:3rem;border-style:none" class="hidden-md-down"></td></tr></tbody></table></div>
 
 <div id="loader" class="p-3" style="display: none;"><img class="mx-auto" src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
 
