添加首页keywords和description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: "首页"
 tagline: "Home Page"
-description: "主页, Home Page"
+keywords: [PKM, IT, Design, Life, 文档格式, 编程, linux, opencascade, wpf, c#, 科技前沿关注, 船舶海工, CAE, 设计]
+description: "lileilei's 个人 PKM, lileilei's 个人笔记, 生活常识、知识、IT学习、编程学习、设计学习、船舶专业学习等的积累、总结"
 comments: false
 id: home
 ---
