diaplay Coding for the group IT

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ id: home
     <article class="col-md-6 col-lg-4 p-2">
         <header>
             <h2>
-                <a href="{{ site.JB.itcategories_path }}" title="IT分类文章">IT</a>
+                <a href="{{ site.JB.itcategories_path }}" title="Coding分类文章">IT</a>
             </h2>
             <hr/>
         </header>
