--- a/pages/group1.html
+++ b/pages/group1.html
@@ -1,23 +1,23 @@
 ---
 layout: page
-title: IT
+title: PKM
 header: Posts By Category
 comments: false
-id: it
+id: pkm
 ---
 
 {% include JB/setup %}
 
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
-  {% assign group = "IT" %}
-  {% assign path = site.JB.itcategories_path %}
+  {% assign group = site.JB.group1_name %}
+  {% assign path = site.JB.groups_path %}
   {% include widgets/group_categories_list %}
 </ul>
 
 {% for category in site.categories %}
   {% for page in category[1] %}
-     {% if page.group == "IT" %}
+     {% if page.group == site.JB.group1_name %}
        <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
         <ul>
          {% assign pages_list = category[1] %}
