--- a/pages/group2.html
+++ b/pages/group2.html
@@ -1,23 +1,23 @@
 ---
 layout: page
-title: Design
+title: IT
 header: Posts By Category
 comments: false
-id: design
+id: it
 ---
 
 {% include JB/setup %}
 
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
-  {% assign group = page.title %}
-  {% assign path = site.JB.designcategories_path %}
+  {% assign group = site.JB.group2_name %}
+  {% assign path = site.JB.group2_path %}
   {% include widgets/group_categories_list %}
 </ul>
 
 {% for category in site.categories %}
   {% for page in category[1] %}
-     {% if page.group == "Design" %}
+     {% if page.group == site.JB.group1_name %}
        <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
         <ul>
          {% assign pages_list = category[1] %}
