修复group2-4页面错误，简化修改index页面descriptionn

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: "首页"
 tagline: "Home Page"
-keywords: [PKM, markdown, 编程, opencascade, .net, python, rust, 船舶海工, 设计]
-description: "个人PKM, 编程、设计、船舶专业等知识总结"
+keywords: [PKM, markdown, git, msys2, 编程, .net, python, rust, opencascade, 船舶海工, 设计]
+description: "个人笔记, 编程、设计、船舶专业等知识总结"
 comments: false
 id: home
 ---
