change commit to gitalk

--- a/pages/messages.html
+++ b/pages/messages.html
@@ -9,4 +9,4 @@ id: message
   <p class="display-4"><small><small>Hello Everyone</small></small></p>
   <p>欢迎来访交流。</div>
 
-{% include widgets/uyan_comment %}
+{% include widgets/comment %}
