修改post，修改group tag问题

--- a/pages/group1.html
+++ b/pages/group1.html
@@ -11,7 +11,7 @@ id: pkm
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
   {% assign group = site.JB.group1_name %}
-  {% assign path = site.JB.groups_path %}
+  {% assign path = site.JB.group1_path %}
   {% include widgets/group_categories_list %}
 </ul>
 
