--- a/pages/group3.html
+++ b/pages/group3.html
@@ -10,7 +10,7 @@ id: design
 
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
-  {% assign group = page.title %}
+  {% assign group = site.JB.group3_name %}
   {% assign path = site.JB.group3_name %}
   {% include widgets/group_categories_list %}
 </ul>
