--- a/pages/group3.html
+++ b/pages/group3.html
@@ -11,7 +11,7 @@ id: design
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
   {% assign group = site.JB.group3_name %}
-  {% assign path = site.JB.group3_name %}
+  {% assign path = site.JB.group3_path %}
   {% include widgets/group_categories_list %}
 </ul>
 
