--- a/pages/design.html
+++ b/pages/design.html
@@ -1,23 +1,23 @@
 ---
 layout: page
-title: IT
+title: Design
 header: Posts By Category
 comments: false
-id: it
+id: design
 ---
 
 {% include JB/setup %}
 
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
-  {% assign group = site.JB.group2_name %}
-  {% assign path = site.JB.group2_path %}
+  {% assign group = site.JB.group_names[2] %}
+  {% assign path = site.JB.group_paths[2] %}
   {% include widgets/group_categories_list %}
 </ul>
 
 {% for category in site.categories %}
   {% for page in category[1] %}
-     {% if page.group == site.JB.group2_name %}
+     {% if page.group == site.JB.group_names[2] %}
        <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
         <ul>
          {% assign pages_list = category[1] %}
