--- a/pages/pkm.html
+++ b/pages/pkm.html
@@ -1,23 +1,23 @@
 ---
 layout: page
-title: Life
+title: PKM
 header: Posts By Category
 comments: false
-id: life
+id: pkm
 ---
 
 {% include JB/setup %}
 
 <ul class="tag_box">
   {% assign categories_list = site.categories %}
-  {% assign group = site.JB.group4_name %}
-  {% assign path = site.JB.group4_path %}
+  {% assign group = site.JB.groups[0].name %}
+  {% assign path = site.JB.groups[0].path %}
   {% include widgets/group_categories_list %}
 </ul>
 
 {% for category in site.categories %}
   {% for page in category[1] %}
-     {% if page.group == site.JB.group4_name %}
+     {% if page.group == site.JB.groups[0].name %}
        <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
         <ul>
          {% assign pages_list = category[1] %}
